<resources>
    <string name="app_name">Rastlince</string>
    <string name="preskoci">Preskoči</string>
    <string name="sorta">Sorta</string>
    <string name="znanstveno_ime">Znanstveno ime</string>
    <string name="ime">Ime</string>
    <string name="zalivanje">Zalivanje</string>
    <string name="datum">Datum prvega zalivanja</string>
    <string name="napaka_omrezje">napaka omrežje</string>
    <string name="napaka_povezava">napaka povezava</string>
    <string name="api_url">https://my-api.plantnet.org/v2/identify/all?api-key=2b109N3y1XY0iOV6VMH4ZFpO</string>
    <string name="toast_notFound">Rastlina ni bila prepoznana.\n Poskusite ponovno!</string>
    <string name="toast_error">Napaka! Poskusite ponovno!</string>
    <string name="datumSimpleFormat">yyyyMMdd_HHmmss</string>
    <string name="commonName">CommonName</string>
    <string name="scienceName">ScienceName</string>
    <string name="pathImage">PathImage</string>
    <string name="znanstvenoImeJson">ZnanstvenoIme</string>
    <string name="zalivanjeDniJson">ZalivanjeDni</string>
    <string name="zalivanjeDateJson">ZalivanjeDate</string>
    <string name="seznam_vasih_rastlin">Seznam vaših rastlin</string>

    <string-array name="imena_rastlin">
        <item>Marta</item>
        <item>Polde</item>
        <item>Snowdrop</item>
        <item>Orhideja</item>
    </string-array>

    <string-array name="vrste_rastlin">
        <item>Peace Lily</item>
        <item>Cactus</item>
        <item>Snowdrop</item>
        <item>Moth Orchid</item>
    </string-array>

    <string-array name="vrste_rastlin_lat">
        <item>Spatiphyllum</item>
        <item>Stenocactus</item>
        <item>Galanthus Nivalis</item>
        <item>Phalaenopsis</item>
    </string-array>

</resources>